--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(/setup/img/hinhnen1.jpg);
+    background-image:url(https://raw.githubusercontent.com/hfgvv1334/cmpvnsv/main/setup/img/hinhnen1.jpg);
     background-repeat: no-repeat;
     border:0;
     margin: 0;
