--- a/main.css
+++ b/main.css
@@ -1,156 +1,57 @@
-body{
-    background-image:url(https://raw.githubusercontent.com/hfgvv1334/cmpvn/main/setup/img/hinhnen1.jpg);
-    background-repeat: no-repeat;
-    border:0;
-    margin: 0;
-    padding: 0;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
-#boxmenu{
-    width: 100%;   
-    height: 2100px;
-}
-.menu{
-    background-image: linear-gradient(0deg,#e44c58,#0761b6);
-    width: 75%;  
-    height: 96%;
-    border-radius: 50px;
-    border-color:#050538;
-    border-style: solid;
-    
-   
-    margin-top:  1%;
-    margin-left: 13%;
-}
-.boxi{
-width: 1px;
-height: 1%;
-}
-.xg:link{
-color: #08fde9;
-text-decoration: none;
-}
-.xg:visited{
-    color: #08fde9;
-    text-decoration: none; 
+<!DOCTYPE html> 
+<html>
+    <head>
+        <link rel="stylesheet" href="/main.css">
+        <title>❖CMP VN❖ </title>
+        <link rel="icon" href="https://hfgvv1334.github.io/cmp/setup/img/logo.png">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div id="boxmenu">
+            <div class="boxi"></div>
+           <div class="menu">
 
-}
-/*menu*/
-#tabmenu{
-   margin-left: 4%;
-   margin-top: 1%;
-   width: 100%;
-    
+             <div id="tabmenu">  <!--menu-->
+                     <ul>
+                     <li ><a  href="">giới thiệu</a></li> <!--mục 1-->
+                     <li ><a href=""> hướng dẫn</a> </li> <!--mục 2-->
+                     <li ><a  href="">lệnh</a></li> <!--mục 3-->
+                     <li ><a  href="">cập nhật</a></li> <!--mục 4-->
 
-}
-#tabmenu ul li {
-    background-image: linear-gradient(180deg,#20abc4,#24056d);
-    border-color: #030a75;
-    border-radius: 10px;
-    border-style:solid;
-    text-align: center;
-    list-style-type: none;
-    color: #130c75;
-    display: inline-table;
-    font-size: 150%;
-    padding: 1%;
-    
-    
-    width: 20%;
-    height: 4%;
-    line-height: 40px;
-    
-}
-#tabmenu ul li a {
-    color: #6fffbc;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-image: linear-gradient(180deg,#20abc4,#130081);
-    border-color: #050538;
-    border-radius: 10px;
-    border-style:solid;
-    text-align: center;
-    list-style-type: none;
-    width: 90%;
-    height: 90%;
-    
-   
-    display: inline-table;
-    font-size: 20px;
-    padding: 1%;
-}
-#tabmenu ul :hover{
-    background-image: linear-gradient(0deg,#07fff3,#1203bb);
-    color: #5fd44f;
-    font-size: 25px;
-}
-/*note*/
-.note{
-    background-image: linear-gradient(180deg,#31313f,#706e8d);
-    width: 90%;
-    height: 92%;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #111114;
-    margin-left: 5%;
-    margin-top: 3%;
-}
-/*name*/
-.name{
-    color: #4cdd12;
-    width: 30%;
-    background-image: linear-gradient(180deg,#31313f,#474653);
-    border-color: #202525;
-    border-style:outset;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 0.2%;
-    margin-left: 35%;
-
-}
-.name2{
-    color: #12dd60;
-    width: 25%;
-    background-image: linear-gradient(180deg,#4e4e63,#5d5c6b);
-    border-color: #2a3a3a;
-    border-style:outset;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 1%;
-    margin-left: 1%; 
-}
-
-/*noidung*/
-.noidung {
-    color: #000000;
-    font-size: 150%;
-    width: 95%;
-    height: 18%;
-    background-image: linear-gradient(180deg,#c0c0c0,#414141);
-    border-color: #031535;
-    border-style:outset;
-    display: flex;
-    text-decoration: none;
-   
-    flex-direction: column;
-   
-    
-}
-.noidung ol li {
-   margin-left: 3%;
-    margin-bottom: 1%;
-}
-.noidung ul li {
-    margin-left: 3%;
-     margin-bottom: 1%;
- }
+                 </ul>
+             </div>
+         <div class="note">
+             <div>
+                <h1 class="name">✾ Giới Thiệu ✾</h1>
+             </div>
+                 <h2 class="name2">thông tin</h2>
+             <div class="noidung">
+                 
+                 <ol >
+                     <li> Sever hiện đang thử nghiệm hỗ trợ 1.16 > 1.18 </li>
+                     <li> Có thể Hỗ trợ cho JAVA và BE&PE </li>
+                     <li> Là 1 Sever Cày cuốc Tương đối Khó nếu như bạn chưa đọc hướng dẫn </li>
+                     <li> Hãy Là người mở sever Cho mọi người thì vào discore [sẽ nhận quà tân thủ siêu ngon]</li>
+                     <li> ID: cmpvn.aternos.me:44754</li>
+                     <li>Là Nơi Có những chức năng Hay ho mà các Dân Có tiền mới có thể có đuọc</li>
+                     <li>Dù bạn được những người chơi lâu cho đồ thì khá là vô ít vì hệ thống cày cấp sẽ ngăng việt đó , những người cấp cao Họ sẽ có máu và lượng sát thương lớn hơn</li>
+                     <li>Khi bạn quá giầu và ko biết làm gì hết ? </li>
+                     <li> Cứ yên tâm sẽ lun có những hệ thông chi tiền cho những người Giàu có </li>
+                     
+                 </ol>
+             </div>
+                    <div >
+                      <h2 class="name">Traler</h2>
+                    </div>
+                    <div  class="kvideo">
+                        <iframe class="kvideo" width="560" height="315" src="https://www.youtube.com/embed/dAhh37Sz4Ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div>
+                        <h2 class="name">Truy Cập</h2>
+                        <a href="https://discord.gg/6rSAX3nUqp"><img class="discore" src="/setup/img/discore.png" ></a>
+                    </div>
+         </div>
+           </div>
+        </div>
+    </body>
+</html>
